Release notes for SIP Express Router (ser)
***********************************************

$Id$

0.8.99-dev changes


new archs:
 - mips2/cobalt experimental support
 - x86_64 experimental support
modules:
 - TM saves the avp list into transactions, and make it available into
   callbacks, failure and reply routes.
 - VM functionality was transfered into TM module. Instead of fetching the
   email value from DB (as VM), TM looks for the "email" attribute to get the
   value.
   vm() function was replaced with t_write_req()
   vm_reply() fifo functions was replcated by TM with t_reply() fifo function
   NOTE!! because current version of SEMS/AA try to send reply via vm_reply,
   it will not work with the TM version.
 - TM contains new command - t_write_unix("/tmp/sems.sock", "announcement")
   sends a message using unix socket interface instead of FIFO interface.
 - TM contains new config variable - unix_tx_timeout -- it specifies the
   transmit timeout of t_write_sock
 - msilo - explicit multidomain support -- recipient's user ID is stored in
   the columns username and domain -- r_uri column kept for compatibility
   reasons (will be removed in future) but not filled by this version of
   module
new modules:
 - answer server options requests [options]
core:
 - new parts:
       UNIX domain socket server implemented
 - changes: 
 	-  avp (Attribute-Value Pair) support added
    -  multicast support added (see mcast_loopback & mcast_ttl)
    -  saving of procces group id enabled, if the -G option is specified
       (a safe way to quickly kill all ser processes)
    -  core dump-ing is enabled by default, see also disable_core_dump
    -  protocol and port can be specified in the alias and listen lines, e.g.:
        alias= tcp:foo.bar:* udp:test.bar:5080 foo.com
        listen= eth0   tcp:eth0:5065 udp:127.0.0.1 [3ffe::1]
    - multiple operator support: ==, != for special operations (e.g myself, ip)
                              ==, !=, ~= for strings